# apache-tvm-tutorials

Neimark/: .gitignore
Neimark/Common/: my_mnist_weights.h5
Neimark/Common/mnist_keras_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Neimark/Common/mnist_keras_model/variables/: variables.data-00000-of-00001  variables.index
Neimark/Common/my_mnist_model_meta-scheduler_evolutionary/: database_workload.json
RVM_Android_Demo/: .gitignore  README.md  build.gradle  settings.gradle
RVM_Android_Demo/RVM/: build.gradle
RVM_Android_Demo/RVM/src/main/: AndroidManifest.xml
RVM_Android_Demo/RVM/src/main/cpp/: CMakeLists.txt  Postprocessor.h  Preprocessor.h  RVMExecutor.cpp  RVMExecutor.h  helper_utils.h  inputs.h  model.h  tvm_rvm.cpp
RVM_Android_Demo/RVM/src/main/cpp/tests/: rvm_tests.cpp
RVM_Android_Demo/RVM/src/main/java/com/example/android/RVM/TVM/: CameraActivity.kt  RVMHelper.kt
RVM_Android_Demo/RVM/src/main/res/drawable/: ic_launcher_background.xml  ic_shutter.xml  ic_shutter_focused.xml  ic_shutter_normal.xml  shape_rectangle.xml
RVM_Android_Demo/RVM/src/main/res/layout/: activity_camera.xml
RVM_Android_Demo/RVM/src/main/res/layout-land/: activity_camera.xml
RVM_Android_Demo/RVM/src/main/res/values/: strings.xml
RVM_Android_Demo/gradle/wrapper/: gradle-wrapper.properties
RVM_Android_Demo/utils/: build.gradle
Swift-TVM-integration/: .gitignore  README.md  swift_tvm_prep_model.py
Swift-TVM-integration/xOS.perf.benchmarking/Shared/: ContentView.swift  ImageInferenceView.swift  ImageNetLabels.swift  c_wrapper.cpp  c_wrapper.h  tvm_bridge.cpp  tvm_bridge.h  xOS_perf_benchmarkingApp.swift
Swift-TVM-integration/xOS.perf.benchmarking/iOS/: Info.plist  UIImage+CVPixelBuffer.swift
Swift-TVM-integration/xOS.perf.benchmarking/macOS/: NSImage+CVPixelBuffer.swift
Swift-TVM-integration/xOS.perf.benchmarking/xOS.perf.benchmarking.xcodeproj/: project.pbxproj
Swift-TVM-integration/xOS.perf.benchmarking/xOS.perf.benchmarking.xcodeproj/project.xcworkspace/xcuserdata/iliya.xcuserdatad/: UserInterfaceState.xcuserstate
Swift-TVM-integration/xOS.perf.benchmarking/xOS.perf.benchmarking.xcodeproj/project.xcworkspace/xcuserdata/iliya.xcuserdatad/xcdebugger/: Expressions.xcexplist
Swift-TVM-integration/xOS.perf.benchmarking/xOS.perf.benchmarking.xcodeproj/xcuserdata/iliya.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Swift-TVM-integration/xOS.perf.benchmarking/xOS.perf.benchmarking.xcodeproj/xcuserdata/iliya.xcuserdatad/xcschemes/: xcschememanagement.plist
